@startuml

title __ORDER's Class Diagram__\n

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        class com.lestscode.ecommerce.models.order.Order {
            - dateCreated : LocalDate
            - id : Long
            - items : List<OrderItem>
            - total : BigDecimal
            + Order()
            + Order()
            + getCustomer()
            + getDateCreated()
            + getId()
            + getItems()
            + getNumberOfItems()
            + getStatus()
            + getTotal()
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        class com.lestscode.ecommerce.models.order.OrderItem {
            - quantity : Integer
            + OrderItem()
            + OrderItem()
            + getProduct()
            + getQuantity()
            + getTotalPrice()
            + setQuantity()
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        class com.lestscode.ecommerce.models.order.OrderProductPK {
            + OrderProductPK()
            + getOrder()
            + getProduct()
            + setOrder()
            + setProduct()
        }
      }
    }
  }
  

  namespace com.lestscode.ecommerce {
    namespace models {
      namespace order {
        enum OrderStatus {
          CANCELED
          CREATED
          DELIVERED
          PAID
          SHIPPED
        }
      }
    }
  }
  

  com.lestscode.ecommerce.models.order.Order o-- com.lestscode.ecommerce.models.customer.Customer : customer
  com.lestscode.ecommerce.models.order.Order o-- com.lestscode.ecommerce.models.order.OrderStatus : status
  com.lestscode.ecommerce.models.order.OrderItem o-- com.lestscode.ecommerce.models.order.OrderProductPK : pk
  com.lestscode.ecommerce.models.order.OrderProductPK .up.|> java.io.Serializable
  com.lestscode.ecommerce.models.order.OrderProductPK o-- com.lestscode.ecommerce.models.order.Order : order
  com.lestscode.ecommerce.models.order.OrderProductPK o-- com.lestscode.ecommerce.models.product.Product : product


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
